# misotts-mlx

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: developer_guide.md  evaluation_report.md  explainer.md  gemini_3_1_accuracy_validation.md  gemma4_setup_guide.md  gemma_4_multimodal_validation_report.md  miso_mlx_friction_report.md  mlx_porting_plan.md  voice_cloning_guide.md
miso_mlx/: audio_evaluator.py  bundle_studio.sh  compare_audio.py  compare_mlx_to_pytorch_trace.py  compare_outputs_gemini.py  compare_transformer_layers.py  dialogue_generator.py  generate_app_icon.py  mimi_parity_test_eager.py  miso_mlx_cli.py  mlx_converter.py  mlx_generator.py  mlx_model.py  mlx_quantizer.py  save_pytorch_trace.py  test_generator.py  test_multimodal_validation.py  test_token_generation.py
miso_mlx/pt_trace/: pt_c0_logits.npy  pt_c0_logits2.npy  pt_curr_sample.npy  pt_last_h.npy  pt_last_h2.npy  pt_masks.npy  pt_next_mask.npy  pt_next_token.npy  pt_tokens.npy
miso_studio/: Package.swift  README.md
miso_studio/Sources/: ContentView.swift  HIGExtensions.swift  MisoAudioPlayer.swift  MisoSynthesisWorker.swift  MisoTTSStudioApp.swift
miso_swift/: Package.resolved  Package.swift  README.md
miso_swift/.swiftpm/xcode/package.xcworkspace/xcuserdata/ghchinoy.xcuserdatad/: UserInterfaceState.xcuserstate
miso_swift/.swiftpm/xcode/xcuserdata/ghchinoy.xcuserdatad/xcschemes/: xcschememanagement.plist
miso_swift/Sources/: main.swift
skills/audio-quality-evaluation/: SKILL.md
skills/misotts-speech-generation/: SKILL.md
skills/mlx-model-porting/: SKILL.md
