[project]
name = "misotts-workspace"
version = "0.1.0"
description = "Apple Silicon MLX Workspace for MisoTTS"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "miso-tts",
    "mlx",
    "moshi_mlx",
    "rustymimi",
    "safetensors",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["sources/MisoTTS"]

[tool.uv.sources]
miso-tts = { workspace = true }
